--- a/ViperSample/View/Xibs/PokemonList/PokemonListViewController.xib
+++ b/ViperSample/View/Xibs/PokemonList/PokemonListViewController.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="ViperSample" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PokemonListViewConroller" customModule="ViperSample" customModuleProvider="target">
             <connections>
                 <outlet property="tableView" destination="EIT-qh-hcH" id="m5P-jV-RIX"/>
                 <outlet property="view" destination="iN0-l3-epB" id="A7g-R4-4Jd"/>
